// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders ./packages/engine/demo/basic.md correctly 1`] = `
Array [
  <div
    style="display:flex;margin:10px"
  >
    <div
      style="display:inline-block;margin-right:10px;border:solid 1px #ccc;border-radius:5px;padding:5px 10px;cursor:move"
    >
      View
    </div>
    <div
      style="display:inline-block;margin-right:10px;border:solid 1px #ccc;border-radius:5px;padding:5px 10px;cursor:move"
    >
      Text
    </div>
    <div
      style="display:inline-block;margin-right:10px;border:solid 1px #ccc;border-radius:5px;padding:5px 10px;cursor:move"
    >
      ViewWithCustomRender
    </div>
  </div>,
  <div />,
  <span
    class="brick BrickWrapper-brickWithConfigForm"
  >
    <div
      class="BrickWrapper-brickConfigForm"
      style="top:-1px;right:-1px"
    >
      <div
        class="BrickWrapper-brickConfigFormBtnGroup RenderConfigurationForm-btnGroup"
      >
        <span
          class="RenderConfigurationForm-deleteBtn"
          data-testid="001-remove-btn"
          title="remove"
        >
          <svg
            fill="currentColor"
            height="1em"
            stroke="currentColor"
            stroke-width="0"
            viewBox="0 0 1024 1024"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M292.7 840h438.6l24.2-512h-487z"
            />
            <path
              d="M864 256H736v-80c0-35.3-28.7-64-64-64H352c-35.3 0-64 28.7-64 64v80H160c-17.7 0-32 14.3-32 32v32c0 4.4 3.6 8 8 8h60.4l24.7 523c1.6 34.1 29.8 61 63.9 61h454c34.2 0 62.3-26.8 63.9-61l24.7-523H888c4.4 0 8-3.6 8-8v-32c0-17.7-14.3-32-32-32zm-504-72h304v72H360v-72zm371.3 656H292.7l-24.2-512h487l-24.2 512z"
            />
          </svg>
        </span>
        <span
          class="RenderConfigurationForm-editBtn"
          data-testid="001-edit-btn"
          title="edit"
        >
          <svg
            fill="currentColor"
            height="1em"
            stroke="currentColor"
            stroke-width="0"
            viewBox="0 0 576 512"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M402.6 83.2l90.2 90.2c3.8 3.8 3.8 10 0 13.8L274.4 405.6l-92.8 10.3c-12.4 1.4-22.9-9.1-21.5-21.5l10.3-92.8L388.8 83.2c3.8-3.8 10-3.8 13.8 0zm162-22.9l-48.8-48.8c-15.2-15.2-39.9-15.2-55.2 0l-35.4 35.4c-3.8 3.8-3.8 10 0 13.8l90.2 90.2c3.8 3.8 10 3.8 13.8 0l35.4-35.4c15.2-15.3 15.2-40 0-55.2zM384 346.2V448H64V128h229.8c3.2 0 6.2-1.3 8.5-3.5l40-40c7.6-7.6 2.2-20.5-8.5-20.5H48C21.5 64 0 85.5 0 112v352c0 26.5 21.5 48 48 48h352c26.5 0 48-21.5 48-48V306.2c0-10.7-12.9-16-20.5-8.5l-40 40c-2.2 2.3-3.5 5.3-3.5 8.5z"
            />
          </svg>
        </span>
        <span
          class="RenderConfigurationForm-moveBtn"
          title="move"
        >
          <svg
            fill="none"
            height="1em"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <polyline
              points="5 9 2 12 5 15"
            />
            <polyline
              points="9 5 12 2 15 5"
            />
            <polyline
              points="15 19 12 22 9 19"
            />
            <polyline
              points="19 9 22 12 19 15"
            />
            <line
              x1="2"
              x2="22"
              y1="12"
              y2="12"
            />
            <line
              x1="12"
              x2="12"
              y1="2"
              y2="22"
            />
          </svg>
        </span>
      </div>
    </div>
    hello world
  </span>,
]
`;

exports[`renders ./packages/engine/demo/children.md correctly 1`] = `
Array [
  <div
    style="display:flex;margin:10px"
  >
    <div
      style="display:inline-block;margin-right:10px;border:solid 1px #ccc;border-radius:5px;padding:5px 10px;cursor:move"
    >
      View
    </div>
    <div
      style="display:inline-block;margin-right:10px;border:solid 1px #ccc;border-radius:5px;padding:5px 10px;cursor:move"
    >
      Text
    </div>
    <div
      style="display:inline-block;margin-right:10px;border:solid 1px #ccc;border-radius:5px;padding:5px 10px;cursor:move"
    >
      ViewWithCustomRender
    </div>
  </div>,
  <div />,
  <div
    class="brick BrickWrapper-brickWithConfigForm"
  >
    <div
      class="BrickWrapper-brickConfigForm"
      style="top:-1px;right:-1px"
    >
      <div
        class="BrickWrapper-brickConfigFormBtnGroup RenderConfigurationForm-btnGroup"
      >
        <span
          class="RenderConfigurationForm-deleteBtn"
          data-testid="001-remove-btn"
          title="remove"
        >
          <svg
            fill="currentColor"
            height="1em"
            stroke="currentColor"
            stroke-width="0"
            viewBox="0 0 1024 1024"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M292.7 840h438.6l24.2-512h-487z"
            />
            <path
              d="M864 256H736v-80c0-35.3-28.7-64-64-64H352c-35.3 0-64 28.7-64 64v80H160c-17.7 0-32 14.3-32 32v32c0 4.4 3.6 8 8 8h60.4l24.7 523c1.6 34.1 29.8 61 63.9 61h454c34.2 0 62.3-26.8 63.9-61l24.7-523H888c4.4 0 8-3.6 8-8v-32c0-17.7-14.3-32-32-32zm-504-72h304v72H360v-72zm371.3 656H292.7l-24.2-512h487l-24.2 512z"
            />
          </svg>
        </span>
        <span
          class="RenderConfigurationForm-editBtn"
          data-testid="001-edit-btn"
          title="edit"
        >
          <svg
            fill="currentColor"
            height="1em"
            stroke="currentColor"
            stroke-width="0"
            viewBox="0 0 576 512"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M402.6 83.2l90.2 90.2c3.8 3.8 3.8 10 0 13.8L274.4 405.6l-92.8 10.3c-12.4 1.4-22.9-9.1-21.5-21.5l10.3-92.8L388.8 83.2c3.8-3.8 10-3.8 13.8 0zm162-22.9l-48.8-48.8c-15.2-15.2-39.9-15.2-55.2 0l-35.4 35.4c-3.8 3.8-3.8 10 0 13.8l90.2 90.2c3.8 3.8 10 3.8 13.8 0l35.4-35.4c15.2-15.3 15.2-40 0-55.2zM384 346.2V448H64V128h229.8c3.2 0 6.2-1.3 8.5-3.5l40-40c7.6-7.6 2.2-20.5-8.5-20.5H48C21.5 64 0 85.5 0 112v352c0 26.5 21.5 48 48 48h352c26.5 0 48-21.5 48-48V306.2c0-10.7-12.9-16-20.5-8.5l-40 40c-2.2 2.3-3.5 5.3-3.5 8.5z"
            />
          </svg>
        </span>
        <span
          class="RenderConfigurationForm-moveBtn"
          title="move"
        >
          <svg
            fill="none"
            height="1em"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <polyline
              points="5 9 2 12 5 15"
            />
            <polyline
              points="9 5 12 2 15 5"
            />
            <polyline
              points="15 19 12 22 9 19"
            />
            <polyline
              points="19 9 22 12 19 15"
            />
            <line
              x1="2"
              x2="22"
              y1="12"
              y2="12"
            />
            <line
              x1="12"
              x2="12"
              y1="2"
              y2="22"
            />
          </svg>
        </span>
      </div>
    </div>
    <span
      class="brick BrickWrapper-brickWithConfigForm"
    >
      <div
        class="BrickWrapper-brickConfigForm"
        style="top:-1px;right:-1px"
      >
        <div
          class="BrickWrapper-brickConfigFormBtnGroup RenderConfigurationForm-btnGroup"
        >
          <span
            class="RenderConfigurationForm-deleteBtn"
            data-testid="002-remove-btn"
            title="remove"
          >
            <svg
              fill="currentColor"
              height="1em"
              stroke="currentColor"
              stroke-width="0"
              viewBox="0 0 1024 1024"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M292.7 840h438.6l24.2-512h-487z"
              />
              <path
                d="M864 256H736v-80c0-35.3-28.7-64-64-64H352c-35.3 0-64 28.7-64 64v80H160c-17.7 0-32 14.3-32 32v32c0 4.4 3.6 8 8 8h60.4l24.7 523c1.6 34.1 29.8 61 63.9 61h454c34.2 0 62.3-26.8 63.9-61l24.7-523H888c4.4 0 8-3.6 8-8v-32c0-17.7-14.3-32-32-32zm-504-72h304v72H360v-72zm371.3 656H292.7l-24.2-512h487l-24.2 512z"
              />
            </svg>
          </span>
          <span
            class="RenderConfigurationForm-editBtn"
            data-testid="002-edit-btn"
            title="edit"
          >
            <svg
              fill="currentColor"
              height="1em"
              stroke="currentColor"
              stroke-width="0"
              viewBox="0 0 576 512"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M402.6 83.2l90.2 90.2c3.8 3.8 3.8 10 0 13.8L274.4 405.6l-92.8 10.3c-12.4 1.4-22.9-9.1-21.5-21.5l10.3-92.8L388.8 83.2c3.8-3.8 10-3.8 13.8 0zm162-22.9l-48.8-48.8c-15.2-15.2-39.9-15.2-55.2 0l-35.4 35.4c-3.8 3.8-3.8 10 0 13.8l90.2 90.2c3.8 3.8 10 3.8 13.8 0l35.4-35.4c15.2-15.3 15.2-40 0-55.2zM384 346.2V448H64V128h229.8c3.2 0 6.2-1.3 8.5-3.5l40-40c7.6-7.6 2.2-20.5-8.5-20.5H48C21.5 64 0 85.5 0 112v352c0 26.5 21.5 48 48 48h352c26.5 0 48-21.5 48-48V306.2c0-10.7-12.9-16-20.5-8.5l-40 40c-2.2 2.3-3.5 5.3-3.5 8.5z"
              />
            </svg>
          </span>
          <span
            class="RenderConfigurationForm-moveBtn"
            title="move"
          >
            <svg
              fill="none"
              height="1em"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <polyline
                points="5 9 2 12 5 15"
              />
              <polyline
                points="9 5 12 2 15 5"
              />
              <polyline
                points="15 19 12 22 9 19"
              />
              <polyline
                points="19 9 22 12 19 15"
              />
              <line
                x1="2"
                x2="22"
                y1="12"
                y2="12"
              />
              <line
                x1="12"
                x2="12"
                y1="2"
                y2="22"
              />
            </svg>
          </span>
        </div>
      </div>
      hello
      <div
        class="BrickWrapper-actionArea BrickWrapper-actionAreaLeft"
      />
      <div
        class="BrickWrapper-actionArea BrickWrapper-actionAreaRight"
      />
      <div
        class="BrickWrapper-actionArea BrickWrapper-actionAreaTop"
      />
      <div
        class="BrickWrapper-actionArea BrickWrapper-actionAreaBottom"
      />
    </span>
    <span
      class="brick BrickWrapper-brickWithConfigForm"
    >
      <div
        class="BrickWrapper-brickConfigForm"
        style="top:-1px;right:-1px"
      >
        <div
          class="BrickWrapper-brickConfigFormBtnGroup RenderConfigurationForm-btnGroup"
        >
          <span
            class="RenderConfigurationForm-deleteBtn"
            data-testid="003-remove-btn"
            title="remove"
          >
            <svg
              fill="currentColor"
              height="1em"
              stroke="currentColor"
              stroke-width="0"
              viewBox="0 0 1024 1024"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M292.7 840h438.6l24.2-512h-487z"
              />
              <path
                d="M864 256H736v-80c0-35.3-28.7-64-64-64H352c-35.3 0-64 28.7-64 64v80H160c-17.7 0-32 14.3-32 32v32c0 4.4 3.6 8 8 8h60.4l24.7 523c1.6 34.1 29.8 61 63.9 61h454c34.2 0 62.3-26.8 63.9-61l24.7-523H888c4.4 0 8-3.6 8-8v-32c0-17.7-14.3-32-32-32zm-504-72h304v72H360v-72zm371.3 656H292.7l-24.2-512h487l-24.2 512z"
              />
            </svg>
          </span>
          <span
            class="RenderConfigurationForm-editBtn"
            data-testid="003-edit-btn"
            title="edit"
          >
            <svg
              fill="currentColor"
              height="1em"
              stroke="currentColor"
              stroke-width="0"
              viewBox="0 0 576 512"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M402.6 83.2l90.2 90.2c3.8 3.8 3.8 10 0 13.8L274.4 405.6l-92.8 10.3c-12.4 1.4-22.9-9.1-21.5-21.5l10.3-92.8L388.8 83.2c3.8-3.8 10-3.8 13.8 0zm162-22.9l-48.8-48.8c-15.2-15.2-39.9-15.2-55.2 0l-35.4 35.4c-3.8 3.8-3.8 10 0 13.8l90.2 90.2c3.8 3.8 10 3.8 13.8 0l35.4-35.4c15.2-15.3 15.2-40 0-55.2zM384 346.2V448H64V128h229.8c3.2 0 6.2-1.3 8.5-3.5l40-40c7.6-7.6 2.2-20.5-8.5-20.5H48C21.5 64 0 85.5 0 112v352c0 26.5 21.5 48 48 48h352c26.5 0 48-21.5 48-48V306.2c0-10.7-12.9-16-20.5-8.5l-40 40c-2.2 2.3-3.5 5.3-3.5 8.5z"
              />
            </svg>
          </span>
          <span
            class="RenderConfigurationForm-moveBtn"
            title="move"
          >
            <svg
              fill="none"
              height="1em"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <polyline
                points="5 9 2 12 5 15"
              />
              <polyline
                points="9 5 12 2 15 5"
              />
              <polyline
                points="15 19 12 22 9 19"
              />
              <polyline
                points="19 9 22 12 19 15"
              />
              <line
                x1="2"
                x2="22"
                y1="12"
                y2="12"
              />
              <line
                x1="12"
                x2="12"
                y1="2"
                y2="22"
              />
            </svg>
          </span>
        </div>
      </div>
      world
      <div
        class="BrickWrapper-actionArea BrickWrapper-actionAreaLeft"
      />
      <div
        class="BrickWrapper-actionArea BrickWrapper-actionAreaRight"
      />
      <div
        class="BrickWrapper-actionArea BrickWrapper-actionAreaTop"
      />
      <div
        class="BrickWrapper-actionArea BrickWrapper-actionAreaBottom"
      />
    </span>
  </div>,
]
`;

exports[`renders ./packages/engine/demo/custom-render.md correctly 1`] = `
Array [
  <div
    style="display:flex;margin:10px"
  >
    <div
      style="display:inline-block;margin-right:10px;border:solid 1px #ccc;border-radius:5px;padding:5px 10px;cursor:move"
    >
      View
    </div>
    <div
      style="display:inline-block;margin-right:10px;border:solid 1px #ccc;border-radius:5px;padding:5px 10px;cursor:move"
    >
      Text
    </div>
    <div
      style="display:inline-block;margin-right:10px;border:solid 1px #ccc;border-radius:5px;padding:5px 10px;cursor:move"
    >
      ViewWithCustomRender
    </div>
  </div>,
  <div />,
  <div
    class="brick BrickWrapper-brickWithConfigForm"
  >
    <div
      class="BrickWrapper-brickConfigForm"
      style="top:-1px;right:-1px"
    >
      <div
        class="BrickWrapper-brickConfigFormBtnGroup RenderConfigurationForm-btnGroup"
      >
        <span
          class="RenderConfigurationForm-deleteBtn"
          data-testid="001-remove-btn"
          title="remove"
        >
          <svg
            fill="currentColor"
            height="1em"
            stroke="currentColor"
            stroke-width="0"
            viewBox="0 0 1024 1024"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M292.7 840h438.6l24.2-512h-487z"
            />
            <path
              d="M864 256H736v-80c0-35.3-28.7-64-64-64H352c-35.3 0-64 28.7-64 64v80H160c-17.7 0-32 14.3-32 32v32c0 4.4 3.6 8 8 8h60.4l24.7 523c1.6 34.1 29.8 61 63.9 61h454c34.2 0 62.3-26.8 63.9-61l24.7-523H888c4.4 0 8-3.6 8-8v-32c0-17.7-14.3-32-32-32zm-504-72h304v72H360v-72zm371.3 656H292.7l-24.2-512h487l-24.2 512z"
            />
          </svg>
        </span>
        <span
          class="RenderConfigurationForm-editBtn"
          data-testid="001-edit-btn"
          title="edit"
        >
          <svg
            fill="currentColor"
            height="1em"
            stroke="currentColor"
            stroke-width="0"
            viewBox="0 0 576 512"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M402.6 83.2l90.2 90.2c3.8 3.8 3.8 10 0 13.8L274.4 405.6l-92.8 10.3c-12.4 1.4-22.9-9.1-21.5-21.5l10.3-92.8L388.8 83.2c3.8-3.8 10-3.8 13.8 0zm162-22.9l-48.8-48.8c-15.2-15.2-39.9-15.2-55.2 0l-35.4 35.4c-3.8 3.8-3.8 10 0 13.8l90.2 90.2c3.8 3.8 10 3.8 13.8 0l35.4-35.4c15.2-15.3 15.2-40 0-55.2zM384 346.2V448H64V128h229.8c3.2 0 6.2-1.3 8.5-3.5l40-40c7.6-7.6 2.2-20.5-8.5-20.5H48C21.5 64 0 85.5 0 112v352c0 26.5 21.5 48 48 48h352c26.5 0 48-21.5 48-48V306.2c0-10.7-12.9-16-20.5-8.5l-40 40c-2.2 2.3-3.5 5.3-3.5 8.5z"
            />
          </svg>
        </span>
        <span
          class="RenderConfigurationForm-moveBtn"
          title="move"
        >
          <svg
            fill="none"
            height="1em"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <polyline
              points="5 9 2 12 5 15"
            />
            <polyline
              points="9 5 12 2 15 5"
            />
            <polyline
              points="15 19 12 22 9 19"
            />
            <polyline
              points="19 9 22 12 19 15"
            />
            <line
              x1="2"
              x2="22"
              y1="12"
              y2="12"
            />
            <line
              x1="12"
              x2="12"
              y1="2"
              y2="22"
            />
          </svg>
        </span>
      </div>
    </div>
    <span>
      foo
    </span>
    <span
      class="brick BrickWrapper-brickWithConfigForm"
    >
      <div
        class="BrickWrapper-brickConfigForm"
        style="top:-1px;right:-1px"
      >
        <div
          class="BrickWrapper-brickConfigFormBtnGroup RenderConfigurationForm-btnGroup"
        >
          <span
            class="RenderConfigurationForm-deleteBtn"
            data-testid="002-remove-btn"
            title="remove"
          >
            <svg
              fill="currentColor"
              height="1em"
              stroke="currentColor"
              stroke-width="0"
              viewBox="0 0 1024 1024"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M292.7 840h438.6l24.2-512h-487z"
              />
              <path
                d="M864 256H736v-80c0-35.3-28.7-64-64-64H352c-35.3 0-64 28.7-64 64v80H160c-17.7 0-32 14.3-32 32v32c0 4.4 3.6 8 8 8h60.4l24.7 523c1.6 34.1 29.8 61 63.9 61h454c34.2 0 62.3-26.8 63.9-61l24.7-523H888c4.4 0 8-3.6 8-8v-32c0-17.7-14.3-32-32-32zm-504-72h304v72H360v-72zm371.3 656H292.7l-24.2-512h487l-24.2 512z"
              />
            </svg>
          </span>
          <span
            class="RenderConfigurationForm-editBtn"
            data-testid="002-edit-btn"
            title="edit"
          >
            <svg
              fill="currentColor"
              height="1em"
              stroke="currentColor"
              stroke-width="0"
              viewBox="0 0 576 512"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M402.6 83.2l90.2 90.2c3.8 3.8 3.8 10 0 13.8L274.4 405.6l-92.8 10.3c-12.4 1.4-22.9-9.1-21.5-21.5l10.3-92.8L388.8 83.2c3.8-3.8 10-3.8 13.8 0zm162-22.9l-48.8-48.8c-15.2-15.2-39.9-15.2-55.2 0l-35.4 35.4c-3.8 3.8-3.8 10 0 13.8l90.2 90.2c3.8 3.8 10 3.8 13.8 0l35.4-35.4c15.2-15.3 15.2-40 0-55.2zM384 346.2V448H64V128h229.8c3.2 0 6.2-1.3 8.5-3.5l40-40c7.6-7.6 2.2-20.5-8.5-20.5H48C21.5 64 0 85.5 0 112v352c0 26.5 21.5 48 48 48h352c26.5 0 48-21.5 48-48V306.2c0-10.7-12.9-16-20.5-8.5l-40 40c-2.2 2.3-3.5 5.3-3.5 8.5z"
              />
            </svg>
          </span>
          <span
            class="RenderConfigurationForm-moveBtn"
            title="move"
          >
            <svg
              fill="none"
              height="1em"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <polyline
                points="5 9 2 12 5 15"
              />
              <polyline
                points="9 5 12 2 15 5"
              />
              <polyline
                points="15 19 12 22 9 19"
              />
              <polyline
                points="19 9 22 12 19 15"
              />
              <line
                x1="2"
                x2="22"
                y1="12"
                y2="12"
              />
              <line
                x1="12"
                x2="12"
                y1="2"
                y2="22"
              />
            </svg>
          </span>
        </div>
      </div>
      bar
      <div
        class="BrickWrapper-actionArea BrickWrapper-actionAreaLeft"
      />
      <div
        class="BrickWrapper-actionArea BrickWrapper-actionAreaRight"
      />
      <div
        class="BrickWrapper-actionArea BrickWrapper-actionAreaTop"
      />
      <div
        class="BrickWrapper-actionArea BrickWrapper-actionAreaBottom"
      />
    </span>
  </div>,
]
`;

exports[`renders ./packages/engine/demo/supply.md correctly 1`] = `
Array [
  <div
    style="display:flex;margin:10px"
  >
    <div
      style="display:inline-block;margin-right:10px;border:solid 1px #ccc;border-radius:5px;padding:5px 10px;cursor:move"
    >
      View
    </div>
    <div
      style="display:inline-block;margin-right:10px;border:solid 1px #ccc;border-radius:5px;padding:5px 10px;cursor:move"
    >
      Text
    </div>
    <div
      style="display:inline-block;margin-right:10px;border:solid 1px #ccc;border-radius:5px;padding:5px 10px;cursor:move"
    >
      ViewWithCustomRender
    </div>
  </div>,
  <div />,
  <div
    class="brick BrickWrapper-brickWithConfigForm"
  >
    <div
      class="BrickWrapper-brickConfigForm"
      style="top:-1px;right:-1px"
    >
      <div
        class="BrickWrapper-brickConfigFormBtnGroup RenderConfigurationForm-btnGroup"
      >
        <span
          class="RenderConfigurationForm-deleteBtn"
          data-testid="001-remove-btn"
          title="remove"
        >
          <svg
            fill="currentColor"
            height="1em"
            stroke="currentColor"
            stroke-width="0"
            viewBox="0 0 1024 1024"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M292.7 840h438.6l24.2-512h-487z"
            />
            <path
              d="M864 256H736v-80c0-35.3-28.7-64-64-64H352c-35.3 0-64 28.7-64 64v80H160c-17.7 0-32 14.3-32 32v32c0 4.4 3.6 8 8 8h60.4l24.7 523c1.6 34.1 29.8 61 63.9 61h454c34.2 0 62.3-26.8 63.9-61l24.7-523H888c4.4 0 8-3.6 8-8v-32c0-17.7-14.3-32-32-32zm-504-72h304v72H360v-72zm371.3 656H292.7l-24.2-512h487l-24.2 512z"
            />
          </svg>
        </span>
        <span
          class="RenderConfigurationForm-editBtn"
          data-testid="001-edit-btn"
          title="edit"
        >
          <svg
            fill="currentColor"
            height="1em"
            stroke="currentColor"
            stroke-width="0"
            viewBox="0 0 576 512"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M402.6 83.2l90.2 90.2c3.8 3.8 3.8 10 0 13.8L274.4 405.6l-92.8 10.3c-12.4 1.4-22.9-9.1-21.5-21.5l10.3-92.8L388.8 83.2c3.8-3.8 10-3.8 13.8 0zm162-22.9l-48.8-48.8c-15.2-15.2-39.9-15.2-55.2 0l-35.4 35.4c-3.8 3.8-3.8 10 0 13.8l90.2 90.2c3.8 3.8 10 3.8 13.8 0l35.4-35.4c15.2-15.3 15.2-40 0-55.2zM384 346.2V448H64V128h229.8c3.2 0 6.2-1.3 8.5-3.5l40-40c7.6-7.6 2.2-20.5-8.5-20.5H48C21.5 64 0 85.5 0 112v352c0 26.5 21.5 48 48 48h352c26.5 0 48-21.5 48-48V306.2c0-10.7-12.9-16-20.5-8.5l-40 40c-2.2 2.3-3.5 5.3-3.5 8.5z"
            />
          </svg>
        </span>
        <span
          class="RenderConfigurationForm-moveBtn"
          title="move"
        >
          <svg
            fill="none"
            height="1em"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <polyline
              points="5 9 2 12 5 15"
            />
            <polyline
              points="9 5 12 2 15 5"
            />
            <polyline
              points="15 19 12 22 9 19"
            />
            <polyline
              points="19 9 22 12 19 15"
            />
            <line
              x1="2"
              x2="22"
              y1="12"
              y2="12"
            />
            <line
              x1="12"
              x2="12"
              y1="2"
              y2="22"
            />
          </svg>
        </span>
      </div>
    </div>
    <div
      class="brick BrickWrapper-brickWithConfigForm"
    >
      <div
        class="BrickWrapper-brickConfigForm"
        style="top:-1px;right:-1px"
      >
        <div
          class="BrickWrapper-brickConfigFormBtnGroup RenderConfigurationForm-btnGroup"
        >
          <span
            class="RenderConfigurationForm-deleteBtn"
            data-testid="002-remove-btn"
            title="remove"
          >
            <svg
              fill="currentColor"
              height="1em"
              stroke="currentColor"
              stroke-width="0"
              viewBox="0 0 1024 1024"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M292.7 840h438.6l24.2-512h-487z"
              />
              <path
                d="M864 256H736v-80c0-35.3-28.7-64-64-64H352c-35.3 0-64 28.7-64 64v80H160c-17.7 0-32 14.3-32 32v32c0 4.4 3.6 8 8 8h60.4l24.7 523c1.6 34.1 29.8 61 63.9 61h454c34.2 0 62.3-26.8 63.9-61l24.7-523H888c4.4 0 8-3.6 8-8v-32c0-17.7-14.3-32-32-32zm-504-72h304v72H360v-72zm371.3 656H292.7l-24.2-512h487l-24.2 512z"
              />
            </svg>
          </span>
          <span
            class="RenderConfigurationForm-editBtn"
            data-testid="002-edit-btn"
            title="edit"
          >
            <svg
              fill="currentColor"
              height="1em"
              stroke="currentColor"
              stroke-width="0"
              viewBox="0 0 576 512"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M402.6 83.2l90.2 90.2c3.8 3.8 3.8 10 0 13.8L274.4 405.6l-92.8 10.3c-12.4 1.4-22.9-9.1-21.5-21.5l10.3-92.8L388.8 83.2c3.8-3.8 10-3.8 13.8 0zm162-22.9l-48.8-48.8c-15.2-15.2-39.9-15.2-55.2 0l-35.4 35.4c-3.8 3.8-3.8 10 0 13.8l90.2 90.2c3.8 3.8 10 3.8 13.8 0l35.4-35.4c15.2-15.3 15.2-40 0-55.2zM384 346.2V448H64V128h229.8c3.2 0 6.2-1.3 8.5-3.5l40-40c7.6-7.6 2.2-20.5-8.5-20.5H48C21.5 64 0 85.5 0 112v352c0 26.5 21.5 48 48 48h352c26.5 0 48-21.5 48-48V306.2c0-10.7-12.9-16-20.5-8.5l-40 40c-2.2 2.3-3.5 5.3-3.5 8.5z"
              />
            </svg>
          </span>
          <span
            class="RenderConfigurationForm-moveBtn"
            title="move"
          >
            <svg
              fill="none"
              height="1em"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <polyline
                points="5 9 2 12 5 15"
              />
              <polyline
                points="9 5 12 2 15 5"
              />
              <polyline
                points="15 19 12 22 9 19"
              />
              <polyline
                points="19 9 22 12 19 15"
              />
              <line
                x1="2"
                x2="22"
                y1="12"
                y2="12"
              />
              <line
                x1="12"
                x2="12"
                y1="2"
                y2="22"
              />
            </svg>
          </span>
        </div>
      </div>
      <span
        class="brick BrickWrapper-brickWithConfigForm"
      >
        <div
          class="BrickWrapper-brickConfigForm"
          style="top:-1px;right:-1px"
        >
          <div
            class="BrickWrapper-brickConfigFormBtnGroup RenderConfigurationForm-btnGroup"
          >
            <span
              class="RenderConfigurationForm-deleteBtn"
              data-testid="003-remove-btn"
              title="remove"
            >
              <svg
                fill="currentColor"
                height="1em"
                stroke="currentColor"
                stroke-width="0"
                viewBox="0 0 1024 1024"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M292.7 840h438.6l24.2-512h-487z"
                />
                <path
                  d="M864 256H736v-80c0-35.3-28.7-64-64-64H352c-35.3 0-64 28.7-64 64v80H160c-17.7 0-32 14.3-32 32v32c0 4.4 3.6 8 8 8h60.4l24.7 523c1.6 34.1 29.8 61 63.9 61h454c34.2 0 62.3-26.8 63.9-61l24.7-523H888c4.4 0 8-3.6 8-8v-32c0-17.7-14.3-32-32-32zm-504-72h304v72H360v-72zm371.3 656H292.7l-24.2-512h487l-24.2 512z"
                />
              </svg>
            </span>
            <span
              class="RenderConfigurationForm-editBtn"
              data-testid="003-edit-btn"
              title="edit"
            >
              <svg
                fill="currentColor"
                height="1em"
                stroke="currentColor"
                stroke-width="0"
                viewBox="0 0 576 512"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M402.6 83.2l90.2 90.2c3.8 3.8 3.8 10 0 13.8L274.4 405.6l-92.8 10.3c-12.4 1.4-22.9-9.1-21.5-21.5l10.3-92.8L388.8 83.2c3.8-3.8 10-3.8 13.8 0zm162-22.9l-48.8-48.8c-15.2-15.2-39.9-15.2-55.2 0l-35.4 35.4c-3.8 3.8-3.8 10 0 13.8l90.2 90.2c3.8 3.8 10 3.8 13.8 0l35.4-35.4c15.2-15.3 15.2-40 0-55.2zM384 346.2V448H64V128h229.8c3.2 0 6.2-1.3 8.5-3.5l40-40c7.6-7.6 2.2-20.5-8.5-20.5H48C21.5 64 0 85.5 0 112v352c0 26.5 21.5 48 48 48h352c26.5 0 48-21.5 48-48V306.2c0-10.7-12.9-16-20.5-8.5l-40 40c-2.2 2.3-3.5 5.3-3.5 8.5z"
                />
              </svg>
            </span>
            <span
              class="RenderConfigurationForm-moveBtn"
              title="move"
            >
              <svg
                fill="none"
                height="1em"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <polyline
                  points="5 9 2 12 5 15"
                />
                <polyline
                  points="9 5 12 2 15 5"
                />
                <polyline
                  points="15 19 12 22 9 19"
                />
                <polyline
                  points="19 9 22 12 19 15"
                />
                <line
                  x1="2"
                  x2="22"
                  y1="12"
                  y2="12"
                />
                <line
                  x1="12"
                  x2="12"
                  y1="2"
                  y2="22"
                />
              </svg>
            </span>
          </div>
        </div>
        foo
        <div
          class="BrickWrapper-actionArea BrickWrapper-actionAreaLeft"
        />
        <div
          class="BrickWrapper-actionArea BrickWrapper-actionAreaRight"
        />
        <div
          class="BrickWrapper-actionArea BrickWrapper-actionAreaTop"
        />
        <div
          class="BrickWrapper-actionArea BrickWrapper-actionAreaBottom"
        />
      </span>
      <div
        class="BrickWrapper-actionArea BrickWrapper-actionAreaLeft"
      />
      <div
        class="BrickWrapper-actionArea BrickWrapper-actionAreaRight"
      />
      <div
        class="BrickWrapper-actionArea BrickWrapper-actionAreaTop"
      />
      <div
        class="BrickWrapper-actionArea BrickWrapper-actionAreaBottom"
      />
    </div>
  </div>,
]
`;

exports[`renders ./packages/engine/demo/supply-from-data.md correctly 1`] = `
Array [
  <div
    style="display:flex;margin:10px"
  >
    <div
      style="display:inline-block;margin-right:10px;border:solid 1px #ccc;border-radius:5px;padding:5px 10px;cursor:move"
    >
      View
    </div>
    <div
      style="display:inline-block;margin-right:10px;border:solid 1px #ccc;border-radius:5px;padding:5px 10px;cursor:move"
    >
      Text
    </div>
    <div
      style="display:inline-block;margin-right:10px;border:solid 1px #ccc;border-radius:5px;padding:5px 10px;cursor:move"
    >
      ViewWithCustomRender
    </div>
  </div>,
  <div />,
  <div
    class="brick BrickWrapper-brickWithConfigForm"
  >
    <div
      class="BrickWrapper-brickConfigForm"
      style="top:-1px;right:-1px"
    >
      <div
        class="BrickWrapper-brickConfigFormBtnGroup RenderConfigurationForm-btnGroup"
      >
        <span
          class="RenderConfigurationForm-deleteBtn"
          data-testid="001-remove-btn"
          title="remove"
        >
          <svg
            fill="currentColor"
            height="1em"
            stroke="currentColor"
            stroke-width="0"
            viewBox="0 0 1024 1024"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M292.7 840h438.6l24.2-512h-487z"
            />
            <path
              d="M864 256H736v-80c0-35.3-28.7-64-64-64H352c-35.3 0-64 28.7-64 64v80H160c-17.7 0-32 14.3-32 32v32c0 4.4 3.6 8 8 8h60.4l24.7 523c1.6 34.1 29.8 61 63.9 61h454c34.2 0 62.3-26.8 63.9-61l24.7-523H888c4.4 0 8-3.6 8-8v-32c0-17.7-14.3-32-32-32zm-504-72h304v72H360v-72zm371.3 656H292.7l-24.2-512h487l-24.2 512z"
            />
          </svg>
        </span>
        <span
          class="RenderConfigurationForm-editBtn"
          data-testid="001-edit-btn"
          title="edit"
        >
          <svg
            fill="currentColor"
            height="1em"
            stroke="currentColor"
            stroke-width="0"
            viewBox="0 0 576 512"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M402.6 83.2l90.2 90.2c3.8 3.8 3.8 10 0 13.8L274.4 405.6l-92.8 10.3c-12.4 1.4-22.9-9.1-21.5-21.5l10.3-92.8L388.8 83.2c3.8-3.8 10-3.8 13.8 0zm162-22.9l-48.8-48.8c-15.2-15.2-39.9-15.2-55.2 0l-35.4 35.4c-3.8 3.8-3.8 10 0 13.8l90.2 90.2c3.8 3.8 10 3.8 13.8 0l35.4-35.4c15.2-15.3 15.2-40 0-55.2zM384 346.2V448H64V128h229.8c3.2 0 6.2-1.3 8.5-3.5l40-40c7.6-7.6 2.2-20.5-8.5-20.5H48C21.5 64 0 85.5 0 112v352c0 26.5 21.5 48 48 48h352c26.5 0 48-21.5 48-48V306.2c0-10.7-12.9-16-20.5-8.5l-40 40c-2.2 2.3-3.5 5.3-3.5 8.5z"
            />
          </svg>
        </span>
        <span
          class="RenderConfigurationForm-moveBtn"
          title="move"
        >
          <svg
            fill="none"
            height="1em"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <polyline
              points="5 9 2 12 5 15"
            />
            <polyline
              points="9 5 12 2 15 5"
            />
            <polyline
              points="15 19 12 22 9 19"
            />
            <polyline
              points="19 9 22 12 19 15"
            />
            <line
              x1="2"
              x2="22"
              y1="12"
              y2="12"
            />
            <line
              x1="12"
              x2="12"
              y1="2"
              y2="22"
            />
          </svg>
        </span>
      </div>
    </div>
    <div
      class="brick BrickWrapper-brickWithConfigForm"
    >
      <div
        class="BrickWrapper-brickConfigForm"
        style="top:-1px;right:-1px"
      >
        <div
          class="BrickWrapper-brickConfigFormBtnGroup RenderConfigurationForm-btnGroup"
        >
          <span
            class="RenderConfigurationForm-deleteBtn"
            data-testid="002-remove-btn"
            title="remove"
          >
            <svg
              fill="currentColor"
              height="1em"
              stroke="currentColor"
              stroke-width="0"
              viewBox="0 0 1024 1024"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M292.7 840h438.6l24.2-512h-487z"
              />
              <path
                d="M864 256H736v-80c0-35.3-28.7-64-64-64H352c-35.3 0-64 28.7-64 64v80H160c-17.7 0-32 14.3-32 32v32c0 4.4 3.6 8 8 8h60.4l24.7 523c1.6 34.1 29.8 61 63.9 61h454c34.2 0 62.3-26.8 63.9-61l24.7-523H888c4.4 0 8-3.6 8-8v-32c0-17.7-14.3-32-32-32zm-504-72h304v72H360v-72zm371.3 656H292.7l-24.2-512h487l-24.2 512z"
              />
            </svg>
          </span>
          <span
            class="RenderConfigurationForm-editBtn"
            data-testid="002-edit-btn"
            title="edit"
          >
            <svg
              fill="currentColor"
              height="1em"
              stroke="currentColor"
              stroke-width="0"
              viewBox="0 0 576 512"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M402.6 83.2l90.2 90.2c3.8 3.8 3.8 10 0 13.8L274.4 405.6l-92.8 10.3c-12.4 1.4-22.9-9.1-21.5-21.5l10.3-92.8L388.8 83.2c3.8-3.8 10-3.8 13.8 0zm162-22.9l-48.8-48.8c-15.2-15.2-39.9-15.2-55.2 0l-35.4 35.4c-3.8 3.8-3.8 10 0 13.8l90.2 90.2c3.8 3.8 10 3.8 13.8 0l35.4-35.4c15.2-15.3 15.2-40 0-55.2zM384 346.2V448H64V128h229.8c3.2 0 6.2-1.3 8.5-3.5l40-40c7.6-7.6 2.2-20.5-8.5-20.5H48C21.5 64 0 85.5 0 112v352c0 26.5 21.5 48 48 48h352c26.5 0 48-21.5 48-48V306.2c0-10.7-12.9-16-20.5-8.5l-40 40c-2.2 2.3-3.5 5.3-3.5 8.5z"
              />
            </svg>
          </span>
          <span
            class="RenderConfigurationForm-moveBtn"
            title="move"
          >
            <svg
              fill="none"
              height="1em"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <polyline
                points="5 9 2 12 5 15"
              />
              <polyline
                points="9 5 12 2 15 5"
              />
              <polyline
                points="15 19 12 22 9 19"
              />
              <polyline
                points="19 9 22 12 19 15"
              />
              <line
                x1="2"
                x2="22"
                y1="12"
                y2="12"
              />
              <line
                x1="12"
                x2="12"
                y1="2"
                y2="22"
              />
            </svg>
          </span>
        </div>
      </div>
      <span
        class="brick BrickWrapper-brickWithConfigForm"
      >
        <div
          class="BrickWrapper-brickConfigForm"
          style="top:-1px;right:-1px"
        >
          <div
            class="BrickWrapper-brickConfigFormBtnGroup RenderConfigurationForm-btnGroup"
          >
            <span
              class="RenderConfigurationForm-deleteBtn"
              data-testid="003-remove-btn"
              title="remove"
            >
              <svg
                fill="currentColor"
                height="1em"
                stroke="currentColor"
                stroke-width="0"
                viewBox="0 0 1024 1024"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M292.7 840h438.6l24.2-512h-487z"
                />
                <path
                  d="M864 256H736v-80c0-35.3-28.7-64-64-64H352c-35.3 0-64 28.7-64 64v80H160c-17.7 0-32 14.3-32 32v32c0 4.4 3.6 8 8 8h60.4l24.7 523c1.6 34.1 29.8 61 63.9 61h454c34.2 0 62.3-26.8 63.9-61l24.7-523H888c4.4 0 8-3.6 8-8v-32c0-17.7-14.3-32-32-32zm-504-72h304v72H360v-72zm371.3 656H292.7l-24.2-512h487l-24.2 512z"
                />
              </svg>
            </span>
            <span
              class="RenderConfigurationForm-editBtn"
              data-testid="003-edit-btn"
              title="edit"
            >
              <svg
                fill="currentColor"
                height="1em"
                stroke="currentColor"
                stroke-width="0"
                viewBox="0 0 576 512"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M402.6 83.2l90.2 90.2c3.8 3.8 3.8 10 0 13.8L274.4 405.6l-92.8 10.3c-12.4 1.4-22.9-9.1-21.5-21.5l10.3-92.8L388.8 83.2c3.8-3.8 10-3.8 13.8 0zm162-22.9l-48.8-48.8c-15.2-15.2-39.9-15.2-55.2 0l-35.4 35.4c-3.8 3.8-3.8 10 0 13.8l90.2 90.2c3.8 3.8 10 3.8 13.8 0l35.4-35.4c15.2-15.3 15.2-40 0-55.2zM384 346.2V448H64V128h229.8c3.2 0 6.2-1.3 8.5-3.5l40-40c7.6-7.6 2.2-20.5-8.5-20.5H48C21.5 64 0 85.5 0 112v352c0 26.5 21.5 48 48 48h352c26.5 0 48-21.5 48-48V306.2c0-10.7-12.9-16-20.5-8.5l-40 40c-2.2 2.3-3.5 5.3-3.5 8.5z"
                />
              </svg>
            </span>
            <span
              class="RenderConfigurationForm-moveBtn"
              title="move"
            >
              <svg
                fill="none"
                height="1em"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <polyline
                  points="5 9 2 12 5 15"
                />
                <polyline
                  points="9 5 12 2 15 5"
                />
                <polyline
                  points="15 19 12 22 9 19"
                />
                <polyline
                  points="19 9 22 12 19 15"
                />
                <line
                  x1="2"
                  x2="22"
                  y1="12"
                  y2="12"
                />
                <line
                  x1="12"
                  x2="12"
                  y1="2"
                  y2="22"
                />
              </svg>
            </span>
          </div>
        </div>
        bar
        <div
          class="BrickWrapper-actionArea BrickWrapper-actionAreaLeft"
        />
        <div
          class="BrickWrapper-actionArea BrickWrapper-actionAreaRight"
        />
        <div
          class="BrickWrapper-actionArea BrickWrapper-actionAreaTop"
        />
        <div
          class="BrickWrapper-actionArea BrickWrapper-actionAreaBottom"
        />
      </span>
      <div
        class="BrickWrapper-actionArea BrickWrapper-actionAreaLeft"
      />
      <div
        class="BrickWrapper-actionArea BrickWrapper-actionAreaRight"
      />
      <div
        class="BrickWrapper-actionArea BrickWrapper-actionAreaTop"
      />
      <div
        class="BrickWrapper-actionArea BrickWrapper-actionAreaBottom"
      />
    </div>
  </div>,
]
`;

exports[`renders ./packages/engine/demo/supply-with-id.md correctly 1`] = `
Array [
  <div
    style="display:flex;margin:10px"
  >
    <div
      style="display:inline-block;margin-right:10px;border:solid 1px #ccc;border-radius:5px;padding:5px 10px;cursor:move"
    >
      View
    </div>
    <div
      style="display:inline-block;margin-right:10px;border:solid 1px #ccc;border-radius:5px;padding:5px 10px;cursor:move"
    >
      Text
    </div>
    <div
      style="display:inline-block;margin-right:10px;border:solid 1px #ccc;border-radius:5px;padding:5px 10px;cursor:move"
    >
      ViewWithCustomRender
    </div>
  </div>,
  <div />,
  <div
    class="brick BrickWrapper-brickWithConfigForm"
  >
    <div
      class="BrickWrapper-brickConfigForm"
      style="top:-1px;right:-1px"
    >
      <div
        class="BrickWrapper-brickConfigFormBtnGroup RenderConfigurationForm-btnGroup"
      >
        <span
          class="RenderConfigurationForm-deleteBtn"
          data-testid="001-remove-btn"
          title="remove"
        >
          <svg
            fill="currentColor"
            height="1em"
            stroke="currentColor"
            stroke-width="0"
            viewBox="0 0 1024 1024"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M292.7 840h438.6l24.2-512h-487z"
            />
            <path
              d="M864 256H736v-80c0-35.3-28.7-64-64-64H352c-35.3 0-64 28.7-64 64v80H160c-17.7 0-32 14.3-32 32v32c0 4.4 3.6 8 8 8h60.4l24.7 523c1.6 34.1 29.8 61 63.9 61h454c34.2 0 62.3-26.8 63.9-61l24.7-523H888c4.4 0 8-3.6 8-8v-32c0-17.7-14.3-32-32-32zm-504-72h304v72H360v-72zm371.3 656H292.7l-24.2-512h487l-24.2 512z"
            />
          </svg>
        </span>
        <span
          class="RenderConfigurationForm-editBtn"
          data-testid="001-edit-btn"
          title="edit"
        >
          <svg
            fill="currentColor"
            height="1em"
            stroke="currentColor"
            stroke-width="0"
            viewBox="0 0 576 512"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M402.6 83.2l90.2 90.2c3.8 3.8 3.8 10 0 13.8L274.4 405.6l-92.8 10.3c-12.4 1.4-22.9-9.1-21.5-21.5l10.3-92.8L388.8 83.2c3.8-3.8 10-3.8 13.8 0zm162-22.9l-48.8-48.8c-15.2-15.2-39.9-15.2-55.2 0l-35.4 35.4c-3.8 3.8-3.8 10 0 13.8l90.2 90.2c3.8 3.8 10 3.8 13.8 0l35.4-35.4c15.2-15.3 15.2-40 0-55.2zM384 346.2V448H64V128h229.8c3.2 0 6.2-1.3 8.5-3.5l40-40c7.6-7.6 2.2-20.5-8.5-20.5H48C21.5 64 0 85.5 0 112v352c0 26.5 21.5 48 48 48h352c26.5 0 48-21.5 48-48V306.2c0-10.7-12.9-16-20.5-8.5l-40 40c-2.2 2.3-3.5 5.3-3.5 8.5z"
            />
          </svg>
        </span>
        <span
          class="RenderConfigurationForm-moveBtn"
          title="move"
        >
          <svg
            fill="none"
            height="1em"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <polyline
              points="5 9 2 12 5 15"
            />
            <polyline
              points="9 5 12 2 15 5"
            />
            <polyline
              points="15 19 12 22 9 19"
            />
            <polyline
              points="19 9 22 12 19 15"
            />
            <line
              x1="2"
              x2="22"
              y1="12"
              y2="12"
            />
            <line
              x1="12"
              x2="12"
              y1="2"
              y2="22"
            />
          </svg>
        </span>
      </div>
    </div>
    <div
      class="brick BrickWrapper-brickWithConfigForm"
    >
      <div
        class="BrickWrapper-brickConfigForm"
        style="top:-1px;right:-1px"
      >
        <div
          class="BrickWrapper-brickConfigFormBtnGroup RenderConfigurationForm-btnGroup"
        >
          <span
            class="RenderConfigurationForm-deleteBtn"
            data-testid="002-remove-btn"
            title="remove"
          >
            <svg
              fill="currentColor"
              height="1em"
              stroke="currentColor"
              stroke-width="0"
              viewBox="0 0 1024 1024"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M292.7 840h438.6l24.2-512h-487z"
              />
              <path
                d="M864 256H736v-80c0-35.3-28.7-64-64-64H352c-35.3 0-64 28.7-64 64v80H160c-17.7 0-32 14.3-32 32v32c0 4.4 3.6 8 8 8h60.4l24.7 523c1.6 34.1 29.8 61 63.9 61h454c34.2 0 62.3-26.8 63.9-61l24.7-523H888c4.4 0 8-3.6 8-8v-32c0-17.7-14.3-32-32-32zm-504-72h304v72H360v-72zm371.3 656H292.7l-24.2-512h487l-24.2 512z"
              />
            </svg>
          </span>
          <span
            class="RenderConfigurationForm-editBtn"
            data-testid="002-edit-btn"
            title="edit"
          >
            <svg
              fill="currentColor"
              height="1em"
              stroke="currentColor"
              stroke-width="0"
              viewBox="0 0 576 512"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M402.6 83.2l90.2 90.2c3.8 3.8 3.8 10 0 13.8L274.4 405.6l-92.8 10.3c-12.4 1.4-22.9-9.1-21.5-21.5l10.3-92.8L388.8 83.2c3.8-3.8 10-3.8 13.8 0zm162-22.9l-48.8-48.8c-15.2-15.2-39.9-15.2-55.2 0l-35.4 35.4c-3.8 3.8-3.8 10 0 13.8l90.2 90.2c3.8 3.8 10 3.8 13.8 0l35.4-35.4c15.2-15.3 15.2-40 0-55.2zM384 346.2V448H64V128h229.8c3.2 0 6.2-1.3 8.5-3.5l40-40c7.6-7.6 2.2-20.5-8.5-20.5H48C21.5 64 0 85.5 0 112v352c0 26.5 21.5 48 48 48h352c26.5 0 48-21.5 48-48V306.2c0-10.7-12.9-16-20.5-8.5l-40 40c-2.2 2.3-3.5 5.3-3.5 8.5z"
              />
            </svg>
          </span>
          <span
            class="RenderConfigurationForm-moveBtn"
            title="move"
          >
            <svg
              fill="none"
              height="1em"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <polyline
                points="5 9 2 12 5 15"
              />
              <polyline
                points="9 5 12 2 15 5"
              />
              <polyline
                points="15 19 12 22 9 19"
              />
              <polyline
                points="19 9 22 12 19 15"
              />
              <line
                x1="2"
                x2="22"
                y1="12"
                y2="12"
              />
              <line
                x1="12"
                x2="12"
                y1="2"
                y2="22"
              />
            </svg>
          </span>
        </div>
      </div>
      <span
        class="brick BrickWrapper-brickWithConfigForm"
      >
        <div
          class="BrickWrapper-brickConfigForm"
          style="top:-1px;right:-1px"
        >
          <div
            class="BrickWrapper-brickConfigFormBtnGroup RenderConfigurationForm-btnGroup"
          >
            <span
              class="RenderConfigurationForm-deleteBtn"
              data-testid="003-remove-btn"
              title="remove"
            >
              <svg
                fill="currentColor"
                height="1em"
                stroke="currentColor"
                stroke-width="0"
                viewBox="0 0 1024 1024"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M292.7 840h438.6l24.2-512h-487z"
                />
                <path
                  d="M864 256H736v-80c0-35.3-28.7-64-64-64H352c-35.3 0-64 28.7-64 64v80H160c-17.7 0-32 14.3-32 32v32c0 4.4 3.6 8 8 8h60.4l24.7 523c1.6 34.1 29.8 61 63.9 61h454c34.2 0 62.3-26.8 63.9-61l24.7-523H888c4.4 0 8-3.6 8-8v-32c0-17.7-14.3-32-32-32zm-504-72h304v72H360v-72zm371.3 656H292.7l-24.2-512h487l-24.2 512z"
                />
              </svg>
            </span>
            <span
              class="RenderConfigurationForm-editBtn"
              data-testid="003-edit-btn"
              title="edit"
            >
              <svg
                fill="currentColor"
                height="1em"
                stroke="currentColor"
                stroke-width="0"
                viewBox="0 0 576 512"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M402.6 83.2l90.2 90.2c3.8 3.8 3.8 10 0 13.8L274.4 405.6l-92.8 10.3c-12.4 1.4-22.9-9.1-21.5-21.5l10.3-92.8L388.8 83.2c3.8-3.8 10-3.8 13.8 0zm162-22.9l-48.8-48.8c-15.2-15.2-39.9-15.2-55.2 0l-35.4 35.4c-3.8 3.8-3.8 10 0 13.8l90.2 90.2c3.8 3.8 10 3.8 13.8 0l35.4-35.4c15.2-15.3 15.2-40 0-55.2zM384 346.2V448H64V128h229.8c3.2 0 6.2-1.3 8.5-3.5l40-40c7.6-7.6 2.2-20.5-8.5-20.5H48C21.5 64 0 85.5 0 112v352c0 26.5 21.5 48 48 48h352c26.5 0 48-21.5 48-48V306.2c0-10.7-12.9-16-20.5-8.5l-40 40c-2.2 2.3-3.5 5.3-3.5 8.5z"
                />
              </svg>
            </span>
            <span
              class="RenderConfigurationForm-moveBtn"
              title="move"
            >
              <svg
                fill="none"
                height="1em"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <polyline
                  points="5 9 2 12 5 15"
                />
                <polyline
                  points="9 5 12 2 15 5"
                />
                <polyline
                  points="15 19 12 22 9 19"
                />
                <polyline
                  points="19 9 22 12 19 15"
                />
                <line
                  x1="2"
                  x2="22"
                  y1="12"
                  y2="12"
                />
                <line
                  x1="12"
                  x2="12"
                  y1="2"
                  y2="22"
                />
              </svg>
            </span>
          </div>
        </div>
        foo
        <div
          class="BrickWrapper-actionArea BrickWrapper-actionAreaLeft"
        />
        <div
          class="BrickWrapper-actionArea BrickWrapper-actionAreaRight"
        />
        <div
          class="BrickWrapper-actionArea BrickWrapper-actionAreaTop"
        />
        <div
          class="BrickWrapper-actionArea BrickWrapper-actionAreaBottom"
        />
      </span>
      <div
        class="BrickWrapper-actionArea BrickWrapper-actionAreaLeft"
      />
      <div
        class="BrickWrapper-actionArea BrickWrapper-actionAreaRight"
      />
      <div
        class="BrickWrapper-actionArea BrickWrapper-actionAreaTop"
      />
      <div
        class="BrickWrapper-actionArea BrickWrapper-actionAreaBottom"
      />
    </div>
  </div>,
]
`;

exports[`renders ./packages/engine/demo/supply-with-style.md correctly 1`] = `
Array [
  <div
    style="display:flex;margin:10px"
  >
    <div
      style="display:inline-block;margin-right:10px;border:solid 1px #ccc;border-radius:5px;padding:5px 10px;cursor:move"
    >
      View
    </div>
    <div
      style="display:inline-block;margin-right:10px;border:solid 1px #ccc;border-radius:5px;padding:5px 10px;cursor:move"
    >
      Text
    </div>
    <div
      style="display:inline-block;margin-right:10px;border:solid 1px #ccc;border-radius:5px;padding:5px 10px;cursor:move"
    >
      ViewWithCustomRender
    </div>
  </div>,
  <div />,
  <div
    class="brick BrickWrapper-brickWithConfigForm"
  >
    <div
      class="BrickWrapper-brickConfigForm"
      style="top:-1px;right:-1px"
    >
      <div
        class="BrickWrapper-brickConfigFormBtnGroup RenderConfigurationForm-btnGroup"
      >
        <span
          class="RenderConfigurationForm-deleteBtn"
          data-testid="001-remove-btn"
          title="remove"
        >
          <svg
            fill="currentColor"
            height="1em"
            stroke="currentColor"
            stroke-width="0"
            viewBox="0 0 1024 1024"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M292.7 840h438.6l24.2-512h-487z"
            />
            <path
              d="M864 256H736v-80c0-35.3-28.7-64-64-64H352c-35.3 0-64 28.7-64 64v80H160c-17.7 0-32 14.3-32 32v32c0 4.4 3.6 8 8 8h60.4l24.7 523c1.6 34.1 29.8 61 63.9 61h454c34.2 0 62.3-26.8 63.9-61l24.7-523H888c4.4 0 8-3.6 8-8v-32c0-17.7-14.3-32-32-32zm-504-72h304v72H360v-72zm371.3 656H292.7l-24.2-512h487l-24.2 512z"
            />
          </svg>
        </span>
        <span
          class="RenderConfigurationForm-editBtn"
          data-testid="001-edit-btn"
          title="edit"
        >
          <svg
            fill="currentColor"
            height="1em"
            stroke="currentColor"
            stroke-width="0"
            viewBox="0 0 576 512"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M402.6 83.2l90.2 90.2c3.8 3.8 3.8 10 0 13.8L274.4 405.6l-92.8 10.3c-12.4 1.4-22.9-9.1-21.5-21.5l10.3-92.8L388.8 83.2c3.8-3.8 10-3.8 13.8 0zm162-22.9l-48.8-48.8c-15.2-15.2-39.9-15.2-55.2 0l-35.4 35.4c-3.8 3.8-3.8 10 0 13.8l90.2 90.2c3.8 3.8 10 3.8 13.8 0l35.4-35.4c15.2-15.3 15.2-40 0-55.2zM384 346.2V448H64V128h229.8c3.2 0 6.2-1.3 8.5-3.5l40-40c7.6-7.6 2.2-20.5-8.5-20.5H48C21.5 64 0 85.5 0 112v352c0 26.5 21.5 48 48 48h352c26.5 0 48-21.5 48-48V306.2c0-10.7-12.9-16-20.5-8.5l-40 40c-2.2 2.3-3.5 5.3-3.5 8.5z"
            />
          </svg>
        </span>
        <span
          class="RenderConfigurationForm-moveBtn"
          title="move"
        >
          <svg
            fill="none"
            height="1em"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <polyline
              points="5 9 2 12 5 15"
            />
            <polyline
              points="9 5 12 2 15 5"
            />
            <polyline
              points="15 19 12 22 9 19"
            />
            <polyline
              points="19 9 22 12 19 15"
            />
            <line
              x1="2"
              x2="22"
              y1="12"
              y2="12"
            />
            <line
              x1="12"
              x2="12"
              y1="2"
              y2="22"
            />
          </svg>
        </span>
      </div>
    </div>
    <div
      class="brick BrickWrapper-brickWithConfigForm"
    >
      <div
        class="BrickWrapper-brickConfigForm"
        style="top:-1px;right:-1px"
      >
        <div
          class="BrickWrapper-brickConfigFormBtnGroup RenderConfigurationForm-btnGroup"
        >
          <span
            class="RenderConfigurationForm-deleteBtn"
            data-testid="002-remove-btn"
            title="remove"
          >
            <svg
              fill="currentColor"
              height="1em"
              stroke="currentColor"
              stroke-width="0"
              viewBox="0 0 1024 1024"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M292.7 840h438.6l24.2-512h-487z"
              />
              <path
                d="M864 256H736v-80c0-35.3-28.7-64-64-64H352c-35.3 0-64 28.7-64 64v80H160c-17.7 0-32 14.3-32 32v32c0 4.4 3.6 8 8 8h60.4l24.7 523c1.6 34.1 29.8 61 63.9 61h454c34.2 0 62.3-26.8 63.9-61l24.7-523H888c4.4 0 8-3.6 8-8v-32c0-17.7-14.3-32-32-32zm-504-72h304v72H360v-72zm371.3 656H292.7l-24.2-512h487l-24.2 512z"
              />
            </svg>
          </span>
          <span
            class="RenderConfigurationForm-editBtn"
            data-testid="002-edit-btn"
            title="edit"
          >
            <svg
              fill="currentColor"
              height="1em"
              stroke="currentColor"
              stroke-width="0"
              viewBox="0 0 576 512"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M402.6 83.2l90.2 90.2c3.8 3.8 3.8 10 0 13.8L274.4 405.6l-92.8 10.3c-12.4 1.4-22.9-9.1-21.5-21.5l10.3-92.8L388.8 83.2c3.8-3.8 10-3.8 13.8 0zm162-22.9l-48.8-48.8c-15.2-15.2-39.9-15.2-55.2 0l-35.4 35.4c-3.8 3.8-3.8 10 0 13.8l90.2 90.2c3.8 3.8 10 3.8 13.8 0l35.4-35.4c15.2-15.3 15.2-40 0-55.2zM384 346.2V448H64V128h229.8c3.2 0 6.2-1.3 8.5-3.5l40-40c7.6-7.6 2.2-20.5-8.5-20.5H48C21.5 64 0 85.5 0 112v352c0 26.5 21.5 48 48 48h352c26.5 0 48-21.5 48-48V306.2c0-10.7-12.9-16-20.5-8.5l-40 40c-2.2 2.3-3.5 5.3-3.5 8.5z"
              />
            </svg>
          </span>
          <span
            class="RenderConfigurationForm-moveBtn"
            title="move"
          >
            <svg
              fill="none"
              height="1em"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <polyline
                points="5 9 2 12 5 15"
              />
              <polyline
                points="9 5 12 2 15 5"
              />
              <polyline
                points="15 19 12 22 9 19"
              />
              <polyline
                points="19 9 22 12 19 15"
              />
              <line
                x1="2"
                x2="22"
                y1="12"
                y2="12"
              />
              <line
                x1="12"
                x2="12"
                y1="2"
                y2="22"
              />
            </svg>
          </span>
        </div>
      </div>
      <span
        class="brick BrickWrapper-brickWithConfigForm"
      >
        <div
          class="BrickWrapper-brickConfigForm"
          style="top:-1px;right:-1px"
        >
          <div
            class="BrickWrapper-brickConfigFormBtnGroup RenderConfigurationForm-btnGroup"
          >
            <span
              class="RenderConfigurationForm-deleteBtn"
              data-testid="003-remove-btn"
              title="remove"
            >
              <svg
                fill="currentColor"
                height="1em"
                stroke="currentColor"
                stroke-width="0"
                viewBox="0 0 1024 1024"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M292.7 840h438.6l24.2-512h-487z"
                />
                <path
                  d="M864 256H736v-80c0-35.3-28.7-64-64-64H352c-35.3 0-64 28.7-64 64v80H160c-17.7 0-32 14.3-32 32v32c0 4.4 3.6 8 8 8h60.4l24.7 523c1.6 34.1 29.8 61 63.9 61h454c34.2 0 62.3-26.8 63.9-61l24.7-523H888c4.4 0 8-3.6 8-8v-32c0-17.7-14.3-32-32-32zm-504-72h304v72H360v-72zm371.3 656H292.7l-24.2-512h487l-24.2 512z"
                />
              </svg>
            </span>
            <span
              class="RenderConfigurationForm-editBtn"
              data-testid="003-edit-btn"
              title="edit"
            >
              <svg
                fill="currentColor"
                height="1em"
                stroke="currentColor"
                stroke-width="0"
                viewBox="0 0 576 512"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M402.6 83.2l90.2 90.2c3.8 3.8 3.8 10 0 13.8L274.4 405.6l-92.8 10.3c-12.4 1.4-22.9-9.1-21.5-21.5l10.3-92.8L388.8 83.2c3.8-3.8 10-3.8 13.8 0zm162-22.9l-48.8-48.8c-15.2-15.2-39.9-15.2-55.2 0l-35.4 35.4c-3.8 3.8-3.8 10 0 13.8l90.2 90.2c3.8 3.8 10 3.8 13.8 0l35.4-35.4c15.2-15.3 15.2-40 0-55.2zM384 346.2V448H64V128h229.8c3.2 0 6.2-1.3 8.5-3.5l40-40c7.6-7.6 2.2-20.5-8.5-20.5H48C21.5 64 0 85.5 0 112v352c0 26.5 21.5 48 48 48h352c26.5 0 48-21.5 48-48V306.2c0-10.7-12.9-16-20.5-8.5l-40 40c-2.2 2.3-3.5 5.3-3.5 8.5z"
                />
              </svg>
            </span>
            <span
              class="RenderConfigurationForm-moveBtn"
              title="move"
            >
              <svg
                fill="none"
                height="1em"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <polyline
                  points="5 9 2 12 5 15"
                />
                <polyline
                  points="9 5 12 2 15 5"
                />
                <polyline
                  points="15 19 12 22 9 19"
                />
                <polyline
                  points="19 9 22 12 19 15"
                />
                <line
                  x1="2"
                  x2="22"
                  y1="12"
                  y2="12"
                />
                <line
                  x1="12"
                  x2="12"
                  y1="2"
                  y2="22"
                />
              </svg>
            </span>
          </div>
        </div>
        foo
        <div
          class="BrickWrapper-actionArea BrickWrapper-actionAreaLeft"
        />
        <div
          class="BrickWrapper-actionArea BrickWrapper-actionAreaRight"
        />
        <div
          class="BrickWrapper-actionArea BrickWrapper-actionAreaTop"
        />
        <div
          class="BrickWrapper-actionArea BrickWrapper-actionAreaBottom"
        />
      </span>
      <div
        class="BrickWrapper-actionArea BrickWrapper-actionAreaLeft"
      />
      <div
        class="BrickWrapper-actionArea BrickWrapper-actionAreaRight"
      />
      <div
        class="BrickWrapper-actionArea BrickWrapper-actionAreaTop"
      />
      <div
        class="BrickWrapper-actionArea BrickWrapper-actionAreaBottom"
      />
    </div>
  </div>,
]
`;

exports[`renders ./packages/engine/demo/supply-without-id.md correctly 1`] = `
Array [
  <div
    style="display:flex;margin:10px"
  >
    <div
      style="display:inline-block;margin-right:10px;border:solid 1px #ccc;border-radius:5px;padding:5px 10px;cursor:move"
    >
      View
    </div>
    <div
      style="display:inline-block;margin-right:10px;border:solid 1px #ccc;border-radius:5px;padding:5px 10px;cursor:move"
    >
      Text
    </div>
    <div
      style="display:inline-block;margin-right:10px;border:solid 1px #ccc;border-radius:5px;padding:5px 10px;cursor:move"
    >
      ViewWithCustomRender
    </div>
  </div>,
  <div />,
  <div
    class="brick BrickWrapper-brickWithConfigForm"
  >
    <div
      class="BrickWrapper-brickConfigForm"
      style="top:-1px;right:-1px"
    >
      <div
        class="BrickWrapper-brickConfigFormBtnGroup RenderConfigurationForm-btnGroup"
      >
        <span
          class="RenderConfigurationForm-deleteBtn"
          data-testid="001-remove-btn"
          title="remove"
        >
          <svg
            fill="currentColor"
            height="1em"
            stroke="currentColor"
            stroke-width="0"
            viewBox="0 0 1024 1024"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M292.7 840h438.6l24.2-512h-487z"
            />
            <path
              d="M864 256H736v-80c0-35.3-28.7-64-64-64H352c-35.3 0-64 28.7-64 64v80H160c-17.7 0-32 14.3-32 32v32c0 4.4 3.6 8 8 8h60.4l24.7 523c1.6 34.1 29.8 61 63.9 61h454c34.2 0 62.3-26.8 63.9-61l24.7-523H888c4.4 0 8-3.6 8-8v-32c0-17.7-14.3-32-32-32zm-504-72h304v72H360v-72zm371.3 656H292.7l-24.2-512h487l-24.2 512z"
            />
          </svg>
        </span>
        <span
          class="RenderConfigurationForm-editBtn"
          data-testid="001-edit-btn"
          title="edit"
        >
          <svg
            fill="currentColor"
            height="1em"
            stroke="currentColor"
            stroke-width="0"
            viewBox="0 0 576 512"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M402.6 83.2l90.2 90.2c3.8 3.8 3.8 10 0 13.8L274.4 405.6l-92.8 10.3c-12.4 1.4-22.9-9.1-21.5-21.5l10.3-92.8L388.8 83.2c3.8-3.8 10-3.8 13.8 0zm162-22.9l-48.8-48.8c-15.2-15.2-39.9-15.2-55.2 0l-35.4 35.4c-3.8 3.8-3.8 10 0 13.8l90.2 90.2c3.8 3.8 10 3.8 13.8 0l35.4-35.4c15.2-15.3 15.2-40 0-55.2zM384 346.2V448H64V128h229.8c3.2 0 6.2-1.3 8.5-3.5l40-40c7.6-7.6 2.2-20.5-8.5-20.5H48C21.5 64 0 85.5 0 112v352c0 26.5 21.5 48 48 48h352c26.5 0 48-21.5 48-48V306.2c0-10.7-12.9-16-20.5-8.5l-40 40c-2.2 2.3-3.5 5.3-3.5 8.5z"
            />
          </svg>
        </span>
        <span
          class="RenderConfigurationForm-moveBtn"
          title="move"
        >
          <svg
            fill="none"
            height="1em"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <polyline
              points="5 9 2 12 5 15"
            />
            <polyline
              points="9 5 12 2 15 5"
            />
            <polyline
              points="15 19 12 22 9 19"
            />
            <polyline
              points="19 9 22 12 19 15"
            />
            <line
              x1="2"
              x2="22"
              y1="12"
              y2="12"
            />
            <line
              x1="12"
              x2="12"
              y1="2"
              y2="22"
            />
          </svg>
        </span>
      </div>
    </div>
    <div
      class="brick BrickWrapper-brickWithConfigForm"
    >
      <div
        class="BrickWrapper-brickConfigForm"
        style="top:-1px;right:-1px"
      >
        <div
          class="BrickWrapper-brickConfigFormBtnGroup RenderConfigurationForm-btnGroup"
        >
          <span
            class="RenderConfigurationForm-deleteBtn"
            data-testid="002-remove-btn"
            title="remove"
          >
            <svg
              fill="currentColor"
              height="1em"
              stroke="currentColor"
              stroke-width="0"
              viewBox="0 0 1024 1024"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M292.7 840h438.6l24.2-512h-487z"
              />
              <path
                d="M864 256H736v-80c0-35.3-28.7-64-64-64H352c-35.3 0-64 28.7-64 64v80H160c-17.7 0-32 14.3-32 32v32c0 4.4 3.6 8 8 8h60.4l24.7 523c1.6 34.1 29.8 61 63.9 61h454c34.2 0 62.3-26.8 63.9-61l24.7-523H888c4.4 0 8-3.6 8-8v-32c0-17.7-14.3-32-32-32zm-504-72h304v72H360v-72zm371.3 656H292.7l-24.2-512h487l-24.2 512z"
              />
            </svg>
          </span>
          <span
            class="RenderConfigurationForm-editBtn"
            data-testid="002-edit-btn"
            title="edit"
          >
            <svg
              fill="currentColor"
              height="1em"
              stroke="currentColor"
              stroke-width="0"
              viewBox="0 0 576 512"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M402.6 83.2l90.2 90.2c3.8 3.8 3.8 10 0 13.8L274.4 405.6l-92.8 10.3c-12.4 1.4-22.9-9.1-21.5-21.5l10.3-92.8L388.8 83.2c3.8-3.8 10-3.8 13.8 0zm162-22.9l-48.8-48.8c-15.2-15.2-39.9-15.2-55.2 0l-35.4 35.4c-3.8 3.8-3.8 10 0 13.8l90.2 90.2c3.8 3.8 10 3.8 13.8 0l35.4-35.4c15.2-15.3 15.2-40 0-55.2zM384 346.2V448H64V128h229.8c3.2 0 6.2-1.3 8.5-3.5l40-40c7.6-7.6 2.2-20.5-8.5-20.5H48C21.5 64 0 85.5 0 112v352c0 26.5 21.5 48 48 48h352c26.5 0 48-21.5 48-48V306.2c0-10.7-12.9-16-20.5-8.5l-40 40c-2.2 2.3-3.5 5.3-3.5 8.5z"
              />
            </svg>
          </span>
          <span
            class="RenderConfigurationForm-moveBtn"
            title="move"
          >
            <svg
              fill="none"
              height="1em"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <polyline
                points="5 9 2 12 5 15"
              />
              <polyline
                points="9 5 12 2 15 5"
              />
              <polyline
                points="15 19 12 22 9 19"
              />
              <polyline
                points="19 9 22 12 19 15"
              />
              <line
                x1="2"
                x2="22"
                y1="12"
                y2="12"
              />
              <line
                x1="12"
                x2="12"
                y1="2"
                y2="22"
              />
            </svg>
          </span>
        </div>
      </div>
      <span
        class="brick BrickWrapper-brickWithConfigForm"
      >
        <div
          class="BrickWrapper-brickConfigForm"
          style="top:-1px;right:-1px"
        >
          <div
            class="BrickWrapper-brickConfigFormBtnGroup RenderConfigurationForm-btnGroup"
          >
            <span
              class="RenderConfigurationForm-deleteBtn"
              data-testid="003-remove-btn"
              title="remove"
            >
              <svg
                fill="currentColor"
                height="1em"
                stroke="currentColor"
                stroke-width="0"
                viewBox="0 0 1024 1024"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M292.7 840h438.6l24.2-512h-487z"
                />
                <path
                  d="M864 256H736v-80c0-35.3-28.7-64-64-64H352c-35.3 0-64 28.7-64 64v80H160c-17.7 0-32 14.3-32 32v32c0 4.4 3.6 8 8 8h60.4l24.7 523c1.6 34.1 29.8 61 63.9 61h454c34.2 0 62.3-26.8 63.9-61l24.7-523H888c4.4 0 8-3.6 8-8v-32c0-17.7-14.3-32-32-32zm-504-72h304v72H360v-72zm371.3 656H292.7l-24.2-512h487l-24.2 512z"
                />
              </svg>
            </span>
            <span
              class="RenderConfigurationForm-editBtn"
              data-testid="003-edit-btn"
              title="edit"
            >
              <svg
                fill="currentColor"
                height="1em"
                stroke="currentColor"
                stroke-width="0"
                viewBox="0 0 576 512"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M402.6 83.2l90.2 90.2c3.8 3.8 3.8 10 0 13.8L274.4 405.6l-92.8 10.3c-12.4 1.4-22.9-9.1-21.5-21.5l10.3-92.8L388.8 83.2c3.8-3.8 10-3.8 13.8 0zm162-22.9l-48.8-48.8c-15.2-15.2-39.9-15.2-55.2 0l-35.4 35.4c-3.8 3.8-3.8 10 0 13.8l90.2 90.2c3.8 3.8 10 3.8 13.8 0l35.4-35.4c15.2-15.3 15.2-40 0-55.2zM384 346.2V448H64V128h229.8c3.2 0 6.2-1.3 8.5-3.5l40-40c7.6-7.6 2.2-20.5-8.5-20.5H48C21.5 64 0 85.5 0 112v352c0 26.5 21.5 48 48 48h352c26.5 0 48-21.5 48-48V306.2c0-10.7-12.9-16-20.5-8.5l-40 40c-2.2 2.3-3.5 5.3-3.5 8.5z"
                />
              </svg>
            </span>
            <span
              class="RenderConfigurationForm-moveBtn"
              title="move"
            >
              <svg
                fill="none"
                height="1em"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <polyline
                  points="5 9 2 12 5 15"
                />
                <polyline
                  points="9 5 12 2 15 5"
                />
                <polyline
                  points="15 19 12 22 9 19"
                />
                <polyline
                  points="19 9 22 12 19 15"
                />
                <line
                  x1="2"
                  x2="22"
                  y1="12"
                  y2="12"
                />
                <line
                  x1="12"
                  x2="12"
                  y1="2"
                  y2="22"
                />
              </svg>
            </span>
          </div>
        </div>
        baz
        <div
          class="BrickWrapper-actionArea BrickWrapper-actionAreaLeft"
        />
        <div
          class="BrickWrapper-actionArea BrickWrapper-actionAreaRight"
        />
        <div
          class="BrickWrapper-actionArea BrickWrapper-actionAreaTop"
        />
        <div
          class="BrickWrapper-actionArea BrickWrapper-actionAreaBottom"
        />
      </span>
      <div
        class="BrickWrapper-actionArea BrickWrapper-actionAreaLeft"
      />
      <div
        class="BrickWrapper-actionArea BrickWrapper-actionAreaRight"
      />
      <div
        class="BrickWrapper-actionArea BrickWrapper-actionAreaTop"
      />
      <div
        class="BrickWrapper-actionArea BrickWrapper-actionAreaBottom"
      />
    </div>
  </div>,
]
`;
